<resources>
    <string name="app_name">Android Developer Fundamentals</string>
    <string name="text_view">This is a TextView</string>
    <string name="text_view_orange">This is an orange TextView</string>
    <string name="text_view_green">This is a green TextView</string>
    <string name="text_view_blue">This is a blue TextView</string>
    <string name="btn_middle_text">This is a Button</string>
    <string name="btn_green_text">This is a green button</string>
    <string name="edit_text_hint">This is an EditText</string>
    <string name="edit_text_new_hint">This is a new EditText</string>
    <string name="notify_me">Notify me :)</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="auto_backup_photos">Auto backup</string>
    <string name="long_text">ScrollView: A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.</string>
    <string name="different_layouts">Different Layouts</string>
    <string name="view_groups_layouts">View Groups</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="layouts">Layouts</string>
    <string name="spinner">spinner</string>
    <string name="spinner_example">Spinner Example</string>
    <string name="default_value_spinner">Select an Android</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="start_second_activity">Start second activity</string>
    <string name="complete_the_name">Please complete the name</string>
    <string name="activity_lifecycle">Activity Lifecycle</string>
    <string name="is_true">Is true</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="title_activity_collapsing">Collapsing Toolbar</string>
    <string name="large_text">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).   Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.  Where can I get some? There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="webview_example">WebView Example</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="accept"><![CDATA[I accept T&C]]></string>
    <string name="login">LOGIN</string>
    <string name="submit">submit</string>
    <string name="recap">Recap</string>
    <string name="week_2">Week 2</string>
    <string name="error_email_input">Fill the input with a valid email address</string>
    <string name="error_phone_input">Fill the input with a phone number</string>
    <string name="error_is_accepted_input">Check should be accepted</string>
    <string name="week2_login">Week 2 - Login</string>
    <string name="week2_code_challenge">Week 2 - Code challenge</string>
    <string name="week3_login">Week 3 - Login</string>
    <string name="week3_view_groups">Week 3 - View Groups</string>
    <string name="week3_web_view">Week 3 - WebView</string>
    <string name="click_me">Click me!</string>
    <string name="i_accept_t_and_c">I accept T and C</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="hello_world">Hello World!</string>
    <string name="hello_android">Hello Android!</string>
    <string name="week2_view_examples">Week 2 - View Examples</string>
    <string name="greeting">Have yourself a merry little Christmas, \nLet your heart be light \nFrom now on, our troubles will be out of sight</string>
    <string name="week3_spinner">Week 3 - Spinner</string>
    <string name="week4_recyclerview">Week 4 - Recycler View</string>
    <string name="week4_recap">Week 4 - Recap</string>
    <string name="week4_constraintlayout">Week 4 - Constraint Layout</string>
    <string name="text_one">Text one</string>
    <string name="text_two">Text two</string>
    <string name="text_three">Text three</string>
    <string name="week5_cc2">Week 5 - Code challenge 2</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="week5_cc3">Week 5 - Code Challenge 3</string>
    <string name="reply">Reply received</string>
    <string name="received">Message received</string>
    <string name="fill_message">Please add a message</string>
    <string name="first_activity">First Activity</string>
    <string name="second_activity">Second Activity</string>
    <string name="open_website">Open Website</string>
    <string name="open_location">Open Location</string>
    <string name="share_text">Share Text</string>
    <string name="cant_handle">Can\'t handle this intent!</string>
    <string name="call">Call</string>
    <string name="share_text_with">Share :)</string>
    <string name="week5_implicitintent">Week 5 - Implicit Intents</string>
    <string name="week4_group2_recyclerview">Week 4 - recycler view group 2</string>
    <string name="week5_lifecycle">Week 5 - Lifecycle and set result method</string>
    <string name="reciever_activity">Receiver Activity</string>
    <string name="tab_1">Music</string>
    <string name="tab_2">Movies</string>
    <string name="tab_3">Articles</string>
    <string name="tab_label1">Here to display some content for Tab1</string>
    <string name="tab_label2">Here to display some content for Tab2</string>
    <string name="tab_label3">Here to display some content for Tab3</string>
    <string name="week6_tabs">Week 6 - Tabs</string>
    <string name="date">DatePickerDialog</string>
    <string name="week_7_alerts_and_cardview">Week 7 - Alerts and CardView</string>
    <string name="timepickerdialog">TimePickerDialog</string>
    <string name="alert">Alert with buttons</string>
    <string name="notice">Notice</string>
    <string name="alert_title">You have a course to attend.</string>
    <string name="launch_app">Launch app</string>
    <string name="reminde_me">Remind me later</string>
    <string name="cancel">Cancel</string>
    <string name="click">click</string>
    <string name="error_occured">An Error Occurred!</string>
    <string name="retry">RETRY</string>
    <string name="retry_message">Retry was pressed</string>
    <string name="week_7_collapsing">Week 7 - Collapsing Toolbar</string>
    <string name="take_picture">Take picture</string>
    <string name="week_7_camera">Week 7 - Camera Permission</string>
    <string name="add_a_number">Add a number</string>
    <string name="send_number">Send Number</string>
    <string name="write_number_error">Write a number</string>
    <string name="hello_article_fragment">Hello Article Fragment :)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="static_fragment">Static Fragment</string>
    <string name="dynamic_fragment">Dynamic Fragment</string>
    <string name="bundle_fragment">Bundle Fragment</string>
    <string name="method_fragment">Method Fragment</string>
    <string name="listener_fragment">Listener Fragment</string>
    <string name="week6_fragments">Week 6 - Fragments</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second number</string>
    <string name="send_sum">Send Sum</string>
    <string name="missing_number_error">Write a number</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="week6_navigation_drawer">Week 6 - Navigation Drawer Activity</string>
    <string name="check_internet_error">Please check your internet connection.</string>
    <string name="week_8_retrofit">Week 8 - Retrofit</string>
    <string name="week_8_retrofit_github">Week 8 - Retrofit Github</string>
    <string name="week_9_file_manager">Week 9 - File Manager</string>
    <string name="create_file_internal">Create File - Internal</string>
    <string name="read_file_internal">Read File - Internal</string>
    <string name="create_file_external">Create File - External</string>
    <string name="read_file_external">Read File - External</string>
    <string name="file_name">File name...</string>
    <string name="file_saved">File Saved.</string>
    <string name="week10_basicui">Week 10 - Basic UI</string>
    <string name="week10_recycler_click">Week 10 - Recycler With Click</string>
    <string name="week_5_saveinstancestateactivity">Week 5 - SaveInstanceStateActivity</string>
    <string name="week_10_firebase_google_login">Week 10 - Firebase Google Login</string>
</resources>