<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_16">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek2ViewExamplesOnClick"
            android:text="@string/week2_view_examples" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek2OnClick"
            android:text="@string/week2_code_challenge" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnLoginOnClick"
            android:text="@string/week3_login" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek3ViewGroupsOnClick"
            android:text="@string/week3_view_groups" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek3WebViewOnClick"
            android:text="@string/week3_web_view" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek3SpinnerOnClick"
            android:text="@string/week3_spinner" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek4RecapOnClick"
            android:text="@string/week4_recap" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek4RecyclerViewOnClick"
            android:text="@string/week4_recyclerview" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek4RecyclerViewGroup2OnClick"
            android:text="@string/week4_group2_recyclerview" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek4ConstraintOnClick"
            android:text="@string/week4_constraintlayout" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek5SaveInstanceStateActivity"
            android:text="@string/week_5_saveinstancestateactivity" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek5CC2"
            android:text="@string/week5_cc2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek5CC3"
            android:text="@string/week5_cc3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek5ImplicitIntents"
            android:text="@string/week5_implicitintent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek5LifecycleAndSetResultOnClick"
            android:text="@string/week5_lifecycle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek6TabsOnClick"
            android:text="@string/week6_tabs" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek6FragmentsOnClick"
            android:text="@string/week6_fragments" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek6NavOnClick"
            android:text="@string/week6_navigation_drawer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek7AlertsAndCardViewOnClick"
            android:text="@string/week_7_alerts_and_cardview" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek7CollapsingToolbarOnClick"
            android:text="@string/week_7_collapsing" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek7CameraOnClick"
            android:text="@string/week_7_camera" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek8RetrofitOnClick"
            android:text="@string/week_8_retrofit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek8RetrofitGithubOnClick"
            android:text="@string/week_8_retrofit_github" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek9FileManager"
            android:text="@string/week_9_file_manager" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek10BasicUi"
            android:text="@string/week10_basicui" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek10RecyclerWithClick"
            android:text="@string/week10_recycler_click" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnWeek10FirebaseLoginClick"
            android:text="@string/week_10_firebase_google_login" />


    </LinearLayout>
</ScrollView>