<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_16"
    android:orientation="vertical"
    tools:context=".week9.FileManagementActivity">

    <EditText
        android:id="@+id/edittext_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_name"/>

    <Button
        android:onClick="createFileInternalOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_file_internal"/>
    <Button
        android:onClick="readFileInternalOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_file_internal"/>

    <Button
        android:onClick="createFileExternalOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_file_external"/>

    <Button
        android:onClick="readFileExternalOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_file_external"/>

    <TextView
        android:id="@+id/textview_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>